<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_centerInParent="true"
    android:background="@drawable/pause_dialog_bg"
    android:orientation="vertical">

    <!--dialog title-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/about_app_dialog_title"
        android:textColor="@color/text_color"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <!--author info-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/about_app_dialog_author"
            android:textColor="@color/text_color"
            android:textSize="20sp" />

        <!--gitHub link-->
        <TextView
            android:id="@+id/about_github_link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/about_app_dialog_github_link"
            android:textColor="@color/text_color"
            android:textSize="20sp" />
    </LinearLayout>

</LinearLayout>