<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_centerInParent="true"
    android:background="@drawable/pause_dialog_bg"
    android:orientation="vertical">


    <!--dialog title-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/pause_dialog_title"
        android:textColor="@color/text_color"
        android:textSize="30sp" />

    <!--restart button-->
    <FrameLayout
        android:id="@+id/resume_fake_button"
        style="?android:attr/buttonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@drawable/button_color_selector"
        android:clickable="true">

        <TextView
            style="?android:attr/buttonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@null"
            android:clickable="false"
            android:drawableLeft="@drawable/ic_done_white_48dp"
            android:focusable="false"
            android:gravity="center"
            android:minHeight="0dp"
            android:minWidth="0dp"
            android:text="@string/pause_dialog_resume_button_text"
            android:textColor="@color/text_color"
            android:textSize="20sp" />
    </FrameLayout>

    <!--restart button-->
    <FrameLayout
        android:id="@+id/restart_fake_button"
        style="?android:attr/buttonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@drawable/button_color_selector">

        <TextView
            style="?android:attr/buttonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@null"
            android:clickable="false"
            android:drawableLeft="@drawable/ic_autorenew_white_48dp"
            android:focusable="false"
            android:gravity="center"
            android:minHeight="0dp"
            android:minWidth="0dp"
            android:text="@string/pause_dialog_restart_button_text"
            android:textColor="@color/text_color"
            android:textSize="20sp" />
    </FrameLayout>

    <!--exit button-->
    <FrameLayout
        android:id="@+id/exit_fake_button"
        style="?android:attr/buttonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@drawable/button_color_selector">

        <TextView
            style="?android:attr/buttonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@null"
            android:clickable="false"
            android:drawableLeft="@drawable/ic_close_white_48dp"
            android:focusable="false"
            android:gravity="center"
            android:minHeight="0dp"
            android:minWidth="0dp"
            android:text="@string/pause_dialog_exit_button_text"
            android:textColor="@color/text_color"
            android:textSize="20sp" />
    </FrameLayout>

</LinearLayout>