<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_centerInParent="true"
    android:background="@drawable/pause_dialog_bg"
    android:orientation="vertical">

    <!--dialog title-->
    <TextView
        android:id="@+id/win_lose_dialog_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/win_dialog_title"
        android:textColor="@color/text_color"
        android:textSize="30sp" />


    <!--next level button-->
    <FrameLayout
        android:id="@+id/lose_try_again_button"
        style="?android:attr/buttonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@drawable/button_color_selector">

        <TextView
            android:id="@+id/win_lose_restart_or_next_text"
            style="?android:attr/buttonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@null"
            android:clickable="false"
            android:drawableLeft="@drawable/ic_navigate_next_white_48dp"
            android:focusable="false"
            android:gravity="center"
            android:minHeight="0dp"
            android:minWidth="0dp"
            android:text="@string/win_dialog_next_button_text"
            android:textColor="@color/text_color"
            android:textSize="20sp" />
    </FrameLayout>

    <!--exit button-->
    <FrameLayout
        android:id="@+id/lose_exit_button"
        style="?android:attr/buttonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@drawable/button_color_selector">

        <TextView
            style="?android:attr/buttonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@null"
            android:clickable="false"
            android:drawableLeft="@drawable/ic_close_white_48dp"
            android:focusable="false"
            android:gravity="center"
            android:minHeight="0dp"
            android:minWidth="0dp"
            android:text="@string/win_dialog_exit_button_text"
            android:textColor="@color/text_color"
            android:textSize="20sp" />
    </FrameLayout>

</LinearLayout>